--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,8 @@
 body  {
-      width: 600px;
-      margin: 0 auto;
-      font-family: 'Lucida Sans';
-      color: #00376c;
+    width: 600px;
+    margin: 0 auto;
+    font-family: 'Lucida Sans';
+    color: #00376c;
 
 }
 
@@ -35,6 +35,11 @@ h3    {
     margin-bottom: 40px;
     background-color: #e7e7e7;
 }
+
+
+.services p {
+    font-style: italic;
+}
  
 
 a     {
@@ -54,6 +59,7 @@ footer {
     background-color: #c7e3ff;
     margin-bottom: 40px;
     padding: 10px;
+    font-style: italic;
 }
 
 
@@ -61,7 +67,3 @@ footer img {
     width: 150px;
 }
 
-
-.services footer p {
-    font-style: italic;
-}
